fsl (4.1.3-1) unstable; urgency=low

  * New Upstream Version.
  * Reverse the order of the octave*-headers build-dependency alternatives
    to account for the removal of octave2.1-headers from unstable
    (Closes: #523826).

 -- Michael Hanke <michael.hanke@gmail.com>  Mon, 27 Apr 2009 21:00:12 +0200

fsl (4.1.2-2) unstable; urgency=low

  * Use internals libs compiled by the fslview package, instead of building
    them again from fsl sources.
  * Added 'XS-DM-Upload-Allowed: yes' in debian/control.
  * Install fslio im* scripts.

 -- Michael Hanke <michael.hanke@gmail.com>  Sat, 07 Feb 2009 10:33:03 +0100

fsl (4.1.2-1) unstable; urgency=low

  * New Upstream Version.
  * Added POSSUM installation directory to environment setup -- it refused to
    work otherwise.

 -- Michael Hanke <michael.hanke@gmail.com>  Fri, 05 Dec 2008 10:23:08 +0100

fsl (4.1.1-2) unstable; urgency=low

  * Compile and use fslio library version that comes with the FSL sources.
    This fixes a bug when FSL 4.1 is used with ANALYZE images, which it
    cannot reliably do anymore (only NIfTI is supported). Also updated the
    configuration documentation (in /etc/fsl/fsl.sh) accordingly.

 -- Michael Hanke <michael.hanke@gmail.com>  Fri, 24 Oct 2008 12:27:38 +0200

fsl (4.1.1-1) unstable; urgency=low

  * New Upstream Version fixing a number of bugs in FEAT, FDT and FNIRT.
  * Updated repackaging. Repackaging procedure was changed to keep fslio in
    the package. This version contains more up-to-date scripts than the ones
    in the nifticlibs package.
  * Install im* and tcl scripts from local fslio sources, instead of using the
    (discontinued) ones in the nifticlibs package. Therefore also removing
    dependency to 'nifti-bin'.
  * Do not install installer script -- useless on Debian (Closes: #489596).
  * Remove broken get-orig-source target from debian/rules. The repackaging
    procedure is implemented in the 'repackage-fsl' script shipped with the
    fslview package.
