@@ -4,8 +4,11 @@ fsl (4.1.3-1) unstable; urgency=low
   * Reverse the order of the octave*-headers build-dependency alternatives
     to account for the removal of octave2.1-headers from unstable
     (Closes: #523826).
+  * Do not build-depend on FSLView anymore. That setup was way to complex and
+    error-prone.
+  * Bumped Standard version to 3.8.1 -- no changes necessary.
 
- -- Michael Hanke <michael.hanke@gmail.com>  Mon, 27 Apr 2009 21:00:12 +0200
+ -- Michael Hanke <michael.hanke@gmail.com>  Mon, 27 Apr 2009 22:13:12 +0200
 
 fsl (4.1.2-2) unstable; urgency=low
 
